@@ -2,6 +2,8 @@
 
 ## v0.8.0
 
+* add new verify API signature accepting char array password and byte array hash
+
 ## v0.7.0
 
 * add OSWAP dependency check plugin to Maven POM #14
